--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
 		varying vec2 vUv;
 		uniform sampler2D tDiffuse;
 		uniform sampler2D tMotion;
+		uniform float fVelocityFactor;
 		void main() {
-			vec2 motionVector = texture2D(tMotion, vUv).xy * 0.5;
+			vec2 motionVector = fVelocityFactor * texture2D(tMotion, vUv).xy * 0.5;
     		vec4 finalColor = vec4(0.0);
 			const int samples = 20;
 			for(int i = 0; i < samples; i++) {
