--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 	<script src="js/postprocessing/ShaderPass.js"></script>
 	<script src="js/postprocessing/GlitchPass.js"></script>
 
+	<script src="js/cube.js"></script>
+
 	<script id="motionvector-vert" type="x-shader/x-vertex">
 		uniform mat4 projectionMatrix;
 		uniform mat4 modelViewMatrix;
