add wallpaper: circle

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 	<script src="js/shaders/CopyShader.js"></script>
 	<script src="js/shaders/DigitalGlitch.js"></script>
+	<script src="js/shaders/RGBShiftShader.js"></script>
 
 	<script src="js/postprocessing/EffectComposer.js"></script>
 	<script src="js/postprocessing/RenderPass.js"></script>
@@ -20,7 +21,11 @@
 	<script src="js/postprocessing/ShaderPass.js"></script>
 	<script src="js/postprocessing/GlitchPass.js"></script>
 
+	<script src="js/gsap/TweenLite.min.js"></script>
+	<script src="js/gsap/easing/EasePack.min.js"></script>
+
 	<script src="js/cube.js"></script>
+	<script src="js/circle.js"></script>
 
 	<script id="motionvector-vert" type="x-shader/x-vertex">
 		uniform mat4 projectionMatrix;
