--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 	<script src="js/shaders/CopyShader.js"></script>
 	<script src="js/shaders/DigitalGlitch.js"></script>
 	<script src="js/shaders/RGBShiftShader.js"></script>
+	<script src="js/shaders/GaussianBlurShader.js"></script>
+	<script src="js/shaders/GodraysShader.js"></script>
+	<script src="js/shaders/AdditiveBlendingShader.js"></script>
 
 	<script src="js/postprocessing/EffectComposer.js"></script>
 	<script src="js/postprocessing/RenderPass.js"></script>
@@ -21,11 +24,14 @@
 	<script src="js/postprocessing/ShaderPass.js"></script>
 	<script src="js/postprocessing/GlitchPass.js"></script>
 
+	<script src="js/controls/OrbitControls.js"></script>
+
 	<script src="js/gsap/TweenLite.min.js"></script>
 	<script src="js/gsap/easing/EasePack.min.js"></script>
 
-	<script src="js/cube.js"></script>
-	<script src="js/circle.js"></script>
+	<script src="js/wallpapers/cube.js"></script>
+	<script src="js/wallpapers/circle.js"></script>
+	<script src="js/wallpapers/ring.js"></script>
 
 	<script id="motionvector-vert" type="x-shader/x-vertex">
 		uniform mat4 projectionMatrix;
