--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
 	<script src="js/shaders/GaussianBlurShader.js"></script>
 	<script src="js/shaders/GodraysShader.js"></script>
 	<script src="js/shaders/AdditiveBlendingShader.js"></script>
+	<script src="js/shaders/BokehShader.js"></script>
 
 	<script src="js/postprocessing/EffectComposer.js"></script>
 	<script src="js/postprocessing/RenderPass.js"></script>
 	<script src="js/postprocessing/MaskPass.js"></script>
 	<script src="js/postprocessing/ShaderPass.js"></script>
 	<script src="js/postprocessing/GlitchPass.js"></script>
+	<script src="js/postprocessing/BokehPass.js"></script>
 
 	<script src="js/controls/OrbitControls.js"></script>
 
