image_slider1: crossfade

--- a/image_slider1/index.html
+++ b/image_slider1/index.html
@@ -8,8 +8,9 @@
 			background-color: dimgrey;
 		}
 
-		#main-img {
+		.main-img {
 			position: absolute;
+			opacity: 0;
 		}
 	</style>
 </head>
@@ -21,7 +22,8 @@
 	<script src="js/gsap/easing/EasePack.min.js"></script>
 	<script src="js/gsap/plugins/CSSPlugin.min.js"></script>
 
-	<img src="./images/60122792_p0.jpg" id="main-img">
+	<img src="./images/001.jpg" class="main-img">
+	<img src="./images/002.jpg" class="main-img">
 
 </body>
 
