image_slider1: image-wise background

--- a/image_slider1/index.html
+++ b/image_slider1/index.html
@@ -23,7 +23,10 @@
 	<script src="js/gsap/plugins/CSSPlugin.min.js"></script>
 
 	<img src="./images/001.jpg" class="main-img">
+	<img src="./images/003.jpg" class="main-img" data-wp-background="dcc6af">
 	<img src="./images/002.jpg" class="main-img">
+	<img src="./images/004.jpg" class="main-img" data-wp-background="ea5d54">
+	<img src="./images/005.jpg" class="main-img">
 
 </body>
 
