--- a/audio_visualizer1/index.html
+++ b/audio_visualizer1/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/three.min.js"></script>
 	<script src="js/main.js"></script>
 
